--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>菜々竈</title>
+<title>菜々竈 (ナナカマド) - 阿波座/創作和食</title>
+<meta property="og:title" content="菜々竈 (ナナカマド) - 阿波座/創作和食"/>
+<meta property="og:description" content="大阪市 西区 阿波座にある居酒屋・創作料理の菜々竈です。和歌山県産の野菜を中心に、全国各地の旬の魚介類、化学調味料無添加で料理した和食と洋食。その料理と共に日本酒やワインを楽しんで頂ける空間。"/>
+<meta property="og:image" content="http://7kamado.com/img/nanakamado_logo.jpg"/>
+<meta property="og:url" content="http://7kamado.com/"/>
+<meta property="og:type" content="food"/>
+<meta property="fb:admins" content="ishijima.ryo"/>
+<meta name="twitter:card" content="大阪市 西区 阿波座にある居酒屋・創作料理の菜々竈です。和歌山県産の野菜を中心に、全国各地の旬の魚介類、化学調味料無添加で料理した和食と洋食。その料理と共に日本酒やワインを楽しんで頂ける空間。" />
+<meta property="og:site_name" content="菜々竈 (ナナカマド) - 阿波座/創作和食"/>
 <meta name="viewport" content="width=device-width">
 <meta name="keywords" content="菜々竈,居酒屋,大阪,阿波座,立売堀,ななかまど,菜々かまど,菜々竃,nanakamado">
 <meta name="description" content="大阪市 西区 阿波座にある居酒屋・創作料理の菜々竈です。和歌山県産の野菜を中心に、全国各地の旬の魚介類、化学調味料無添加で料理した和食と洋食。その料理と共に日本酒やワインを楽しんで頂ける空間。">
