デグレ対応

--- a/index.html
+++ b/index.html
@@ -95,14 +95,17 @@
 
 		$('#nanakamado').click(function() {
 			$("#concept").fadeIn(500);
+			$('#mainH1').empty().append("<span class=\"glyphicon glyphicon-leaf\"></span> Concept");
 		});
 
 		$('#vegetable').click(function() {
 			$("#menu").fadeIn(500);
+			$('#mainH1').empty().append("<span class=\"glyphicon glyphicon-book\"></span> Menu");
 		});
 		
 		$('#name_na').click(function() {
 			$("#news").fadeIn(500);
+			$('#mainH1').empty().append("<span class=\"glyphicon glyphicon-send\"></span> News");
 		});
 		/*
 		$('#name_nana').click(function() {
@@ -114,6 +117,7 @@
 
 		$('#right_flower').click(function() {
 			$("#access").fadeIn(500);
+			$('#mainH1').empty().append("<span class=\"glyphicon glyphicon-map-marker\"></span> Access");
 		});
 
 		$(displayContentsElements).click(function(){
@@ -122,21 +126,25 @@
 		//////
 		$('#conceptMenu').click(function() {
 			$("#concept").fadeIn(500);
+			$('#mainH1').empty().append("<span class=\"glyphicon glyphicon-leaf\"></span> Concept");
 			$('.menu-link').trigger('click');
 		});
 
 		$('#menuMenu').click(function() {
 			$("#menu").fadeIn(500);
+			$('#mainH1').empty().append("<span class=\"glyphicon glyphicon-book\"></span> Menu");
 			$('.menu-link').trigger('click');
 		});
 		
 		$('#accessMenu').click(function() {
 			$("#access").fadeIn(500);
+			$('#mainH1').empty().append("<span class=\"glyphicon glyphicon-map-marker\"></span> Access");
 			$('.menu-link').trigger('click');
 		});
 
 		$('#newsMenu').click(function() {
 			$("#news").fadeIn(500);
+			$('#mainH1').empty().append("<span class=\"glyphicon glyphicon-send\"></span> News");
 			$('.menu-link').trigger('click');
 		});
 		
@@ -212,7 +220,7 @@
 		    url: 'http://7kamado.com/',
 		    title: '菜々竈',
 		    data: {
-		        media: '/img/logo.png'
+		        media: 'img/logo.png'
 		    }
 		});
 	});
@@ -263,9 +271,9 @@
 		</div>
 		<div id="contents" class="contents">
 			<div id="inner_contents" class="contents">
+				<h1 id="mainH1"></h1>
 				<div id="main" class="main">
 					<div id="access">
-						<h1><span class="glyphicon glyphicon-map-marker"></span> Access</h1>
 						<p class="fb_comm" style="background-color:#ffffff;padding:20px;margin:20px;width:80%;">
 							<img src="img/logoname.png"><br><br>
 							〒 550-0012 大阪府大阪市大阪市西区立売堀4-4-23 2F<br><br>
@@ -289,7 +297,6 @@
 						<br><br><br><br><br><br><br><br><br><br>
 					</div>
 					<div id="concept">
-						<h1><span class="glyphicon glyphicon-leaf"></span> Concept</h1>
 						<p class="fb_comm" style="background-color:#ffffff;padding:20px;margin:20px;">
 							<img src="img/logo.png" alt="concept" style="width:300px;display:block;margin-left:auto;margin-right:auto;margin-top:50px;">
 							<span style="display:block;margin-left:auto;margin-right:auto;">
@@ -302,12 +309,10 @@
 						<br><br><br><br><br><br><br><br><br>
 					</div>
 					<div id="menu">
-						<h1><span class="glyphicon glyphicon-book"></span> Menu</h1><br>
 						<img src="img/menu.png" alt="menu" class="img-rounded menu">
 						<br><br><br><br><br><br><br><br><br>
 					</div>
 					<div id="news">
-						<h1><span class="glyphicon glyphicon-send"></span> News</h1>
 						<dl id="info">
 						  <dd>
 						    <ul id="facebook"></ul>
