add background image

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	url[1] = 'img/flower-back1071.jpg';
 	url[2] = 'img/IMG_1322.jpg';
 	url[3] = 'img/IMG_1317.jpg';
+	url[4] = 'img/IMG_1314.jpg';
 	$(function(){
 
 		//buttonElements = "#left_flower,#right_flower,#nanakamado,#name_na,#name_nana,#name_kamado,#vegetable";
