--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 					<div id="concept">
 						<p class="fb_comm">
 							<img src="img/logo.png" alt="concept" class="concept">
-							<span style="display:block;margin-left:auto;margin-right:auto;">
+							<span class="concept-text">
 								<img src="img/concept.png" alt="和歌山県産の新鮮な野菜を中心に、全国各地の旬の魚介類、世界各地の食材を使い丹精を込めて作り上げた料理をワインや日本酒と共にお楽しみください。"><br>
 								<img src="img/wines.png" alt="wines" class="concept-img">
 								<img src="img/tiles.png" alt="tiles" class="concept-img">
