--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="css/style.css" media="all">
 	<link rel="stylesheet" href="css/bootstrap.css" media="all">
 	<link rel="stylesheet" href="css/social-likes_classic.css">
+	<link rel="stylesheet" href="css/lightbox.css" >
 	<link href='http://fonts.googleapis.com/css?family=Averia+Gruesa+Libre' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/sublimeSlideshow.css" media="all" />
 	<script type="text/javascript" 
@@ -103,7 +104,9 @@
 								 ・ お電話でお問い合わせください<br>
 							</p>
 							<br>
-							<img src="img/map.jpg" alt="map" class="img-rounded map">
+							<a href="img/map.jpg" data-lightbox="map">
+								<img src="img/map.jpg" alt="map" class="img-rounded map">
+							</a>
 							<br><br>
 							<a href="https://maps.google.co.jp/maps?es_sm=119&um=1&ie=UTF-8&q=%E8%8F%9C%E3%80%85%E7%AB%88&fb=1&gl=jp&hq=%E8%8F%9C%E3%80%85%E7%AB%88&cid=6031834777810485408&sa=X&ei=yO19VJn1Lqj3mQW5loA4&ved=0CCMQrwswAA" target="_blank" ><span class="glyphicon glyphicon-map-marker"></span> Google Mapでみる <span class="glyphicon glyphicon-new-window" style="font-size:10px;"></span></a>
 						</div>
@@ -117,17 +120,26 @@
 									<img src="img/concept.png" alt="和歌山県産の新鮮な野菜を中心に、全国各地の旬の魚介類、世界各地の食材を使い丹精を込めて作り上げた料理をワインや日本酒と共にお楽しみください。" class="concept-message">
 								</div>
 								<div class="concept-imgs">
-									<img src="img/pig.png" alt="pig" class="concept-img">
-									<img src="img/wines.png" alt="wines" class="concept-img">
-									<img src="img/tiles.png" alt="tiles" class="concept-img">
+									<a href="img/pig.png" data-lightbox="concept">
+										<img src="img/pig.png" alt="pig" class="concept-img">
+									</a>
+									<a href="img/wines.png" data-lightbox="concept">
+										<img src="img/wines.png" alt="wines" class="concept-img">
+									</a>
+									<a href="img/tiles.png" data-lightbox="concept">
+										<img src="img/tiles.png" alt="tiles" class="concept-img">
+									</a>
 								</div>
+								<br><br>
 							</div>
 						</div>
 						<br><br><br><br><br><br><br><br><br>
 					</div>
 					<div id="menu">
 						<br>
-						<img src="img/menu.png" alt="menu" class="menu">
+						<a href="img/menu.png" data-lightbox="menu">
+							<img src="img/menu.png" alt="menu" class="menu">
+						</a>
 						<br><br><br><br><br><br><br><br><br>
 					</div>
 					<div id="news">
