--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
 									<img src="img/concept.png" alt="和歌山県産の新鮮な野菜を中心に、全国各地の旬の魚介類、世界各地の食材を使い丹精を込めて作り上げた料理をワインや日本酒と共にお楽しみください。" class="concept-message">
 								</div>
 								<div class="concept-imgs">
-									<a href="img/pig.png" data-lightbox="concept">
-										<img src="img/pig.png" alt="pig" class="concept-img">
+									<a href="img/pig.jpg" data-lightbox="concept">
+										<img src="img/pig.jpg" alt="pig" class="concept-img">
 									</a>
-									<a href="img/wines.png" data-lightbox="concept">
-										<img src="img/wines.png" alt="wines" class="concept-img">
+									<a href="img/wines.jpg" data-lightbox="concept">
+										<img src="img/wines.jpg" alt="wines" class="concept-img">
 									</a>
-									<a href="img/tiles.png" data-lightbox="concept">
-										<img src="img/tiles.png" alt="tiles" class="concept-img">
+									<a href="img/tiles.jpg" data-lightbox="concept">
+										<img src="img/tiles.jpg" alt="tiles" class="concept-img">
 									</a>
 								</div>
 								<br><br>
